# base-for-sfml

./: CMakeLists.txt  README.md
scr/: main.cpp
scr/scr/: game_logic.cpp  ui.cpp
